# sample_code

./: README.md
Alignment_prerejective/: CMakeLists.txt  alignment_prerejective.cpp
Alignment_prerejective/.kdev4/: Alignment_prerejective.kdev4
alignment test/: alignment_prerejective.cpp
compute_average_point_distance/: CMakeLists.txt  compute_average_point_distance.cpp
compute_cloud_error/: CMakeLists.txt  compute_cloud_error.cpp
conditional_euclidean_clustering/: conditional_euclidean_clustering.cpp
corresponding_grouping/: CMakeLists.txt  correspondence_grouping.cpp
downsample_pcd/: CMakeLists.txt  downsample_pcd.cpp
dti_triangulation/: CMakeLists.txt  CMakeLists.txt~  ReconstructPointCloud.cpp  ReconstructPointCloud.hpp  dti_triangulation.cpp  dti_triangulation.kdev4
dti_triangulation/.kdev4/: dti_triangulation.kdev4
dti_viewer/: CMakeLists.txt  dti_viewer.cpp
lccp_segmentation/: CMakeLists.txt  example_lccp_segmentation.cpp
manual_registration/: CMakeLists.txt  manual_registration.cpp  manual_registration.h
move_object_frame/: CMakeLists.txt  CMakeLists.txt~  move_object_frame.cpp  move_object_frame.cpp~  move_object_frame.kdev4
move_object_frame/.kdev4/: move_object_frame.kdev4
pairwise_registration/: CMakeLists.txt  b_list.txt  cup_list.txt  pairwise_incremental_registration.cpp  registre_cup.sh
pairwise_registration/point_clouds/: pc_39.pcd  pc_40.pcd  pc_41.pcd
pairwise_registration/reg_pairs/: 1.pcd  10.pcd  11.pcd  12.pcd  13.pcd  14.pcd  2.pcd  3.pcd  4.pcd  5.pcd  6.pcd  7.pcd  8.pcd  9.pcd
pairwise_registration/tea/: p_0.pcd  p_1.pcd  p_2.pcd  p_3.pcd  p_4.pcd  p_5.pcd  p_6.pcd  p_7.pcd
passthrough/: CMakeLists.txt  passthrough.cpp
pose_estimation_app/: CMakeLists.txt  pose_estimation_app.cpp  ransac.h  ransac_impl.hpp
ppf_pose_estimation/: CMakeLists.txt  ppf_pose_estimation.cpp
sac_initial_alignment/: CMakeLists.txt  sac_initial_alignment.cpp  sac_initial_alignment.kdev4
scale_pcd/: CMakeLists.txt  scale_pcd.cpp
statistical_outline_remove/: CMakeLists.txt  statistical_outlier_remove.cpp
